--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@ title: ajhstn's code
 
 Hi.  Here i share PowerShell scrpits that i have put together for various works.
 
-<ul>
-  {% for post in site.posts %}
-  <span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
-  {% endfor %}
-</ul>
+{% for post in site.posts %}
+<p><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></p>
+{% endfor %}
