--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: ajhstn's code
 ---
 
-Hi.  Here i share PowerShell scrpits that i have put together for various works.
+Hi.  Here i share PowerShell scripts that i have put together for a variety of work.
 
 {% for post in site.posts %}
 <p><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></p>
