--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: ajhstn's code
 ---
 
-Hi.  Here i share PowerShell scripts that i have put together for a variety of work.
+<h3>Here i share PowerShell script that i have put together over time during my days in system/infrastructure engineering.</h3>
 
 {% for post in site.posts %}
 <p><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></p>
